refactor/233: Refactored DependenciesValidator to support maven multi-module projects (#234)